# vllatent-ego-drone

./: .gitignore  AGENTS.md  CLAUDE.md  DEV_LOG.md  Makefile  README.md  pyproject.toml
.claude/: ralph-rules.md
.codex/: ralph-rules.md
.github/workflows/: ci.yml
_archived/scripts/: analyze_annotations.py
_archived/scripts/demo/: trajectory_3d.py
_archived/tests/: test_cache_manifest.py  test_teacher_contract.py
_archived/vllatent/: cache.py
_archived/vllatent/render/: __init__.py  __main__.py  harness.py
configs/: data_audit.yaml  default.yaml  sports.yaml  sports_clips.yaml  sports_clips_candidates.yaml
docs/: TOPOLOGY.md  full-run-sizing.md  io-contract.md
fixtures/episodes/: quaternion_trap.json  tiny_episode.json
manifests/b3_cs3/: asset.json  rig.json  scene.json
plans/: handoff-2026-06-08-refactor-session.md  handoff-2026-06-09-resume-ralph-A5.10.md  handoff-2026-06-11-resume-ralph-A5.12.md  handoff-2026-06-14-resume-ralph-A5.14.md  handoff-2026-06-15-resume-ralph-A5.16.md  handoff-2026-06-20-content-filter-yolo.md  handoff-2026-06-23-continue-from-b1.8.md  handoff-2026-06-24-b1.10c-onwards.md  phase-a-data-and-io-contract.md  phase-a5-replan-postpivot.md  phase-b-sports-training.md  phase-b1-sports-data-pipeline.md  phase-b3-causal-ski-sim-latent-decoder.md  phase-b3-human-conditioned-world-model.md  planning-prompt-2026-06-08-PM-replan-postpivot.md  planning-prompt-2026-06-08-refactor-before-phaseB.md
reports/: training-policy-research-2026-06-25.md
scripts/: a5_8_worldvln_meta.sh  a5_8b_worldvln_probe.sh  audit_b3_cs3_replays.py  backfill_person_tracks.py  benchmark_encoder_orin.py  check_no_blobs.sh  clip_report.py  convert_person_bbox_to_encoder_crop.py  curate_clips.py  curate_sports_clips.py  data_quality_report.py  download_cosfly.sh  encode_latents.sh  export_b3_cs3_pose_table.py  fetch_aerialvln_json.sh  ingest_youtube_pilot.py  person_label_montage.py  qc_lib.py  qc_report.py  ralph.sh  render_aerialvln.sh  run_full_cache.sh  run_megasam_pipeline.sh  run_stage0_gates.py  screen_person_cache.py  setup_h20_env.sh  test_e2e_subclip.py  train_sports.py  train_sports_b2.py  train_sports_b3.py  validate_megasam.py  verify_filter.py
scripts/blender/: b3_cs3_bridge.py
scripts/demo/: arch_diagram.py  dataset_stats.py  report_notes.txt
scripts/megasam_shims/: nystrom_shim.py  run_unidepth.py
tests/: conftest.py  test_action_metrics.py  test_action_policy.py  test_actions.py  test_audit.py  test_b3_cs3_replay_audit.py  test_blender_boundary.py  test_cache_manifest.py  test_checkpoint.py  test_collate.py  test_config.py  test_content_filter.py  test_cosfly_adapter.py  test_curate.py  test_data_quality_report.py  test_data_shapes.py  test_encode_batch.py  test_encode_contract.py  test_evaluate.py  test_frames.py  test_heads.py  test_human_world_model.py  test_ingest_acquire.py  test_ingest_ego_motion.py  test_ingest_megasam.py  test_ingest_pipeline.py  test_ingest_preprocess.py  test_ingest_quality.py  test_losses.py  test_model.py  test_optim.py  test_person_probes.py  test_person_tracking.py  test_plan_tokens.py  test_predictor.py  test_render_unit.py  test_run_stage0_gates.py  test_sanity.py  test_scale_free_targets.py  test_schemas.py  (+32 more)
vllatent/: __init__.py  actions.py  audit.py  cache.py  config.py  frames.py  io.py  manifest.py  plan_tokens.py  scale_free_targets.py  schemas.py
vllatent/data/: __init__.py  __main__.py  collate.py  loader.py  sports_loader.py
vllatent/encode/: __init__.py  batch.py  dinov3.py  text.py
vllatent/ingest/: __init__.py  __main__.py  acquire.py  content_filter.py  cosfly_adapter.py  curate.py  ego_motion.py  megasam.py  person_tracking.py  pipeline.py  preprocess.py  quality.py  visualize.py  vo_validation.py
vllatent/model/: __init__.py  action_policy.py  heads.py  human_world_model.py  predictor.py  sports_model.py  transformer_blocks.py  world_action_model.py
vllatent/render/: __main__.py  harness.py
vllatent/sim/: __init__.py  contracts.py  frames.py  labels.py  pose.py  rig.py  scene.py  skier.py  skier_audit.py  skier_fixtures.py
vllatent/sports/: __init__.py  __main__.py  acquire.py  cache.py  config.py  ego_motion.py  encode.py  loader.py  megasam.py  pipeline.py  preprocess.py  quality.py  schemas.py
vllatent/teacher/: __init__.py  worldvln.py
vllatent/train/: __init__.py  action_metrics.py  checkpoint.py  evaluate.py  losses.py  optim.py  person_probes.py  sanity.py  viz.py  world_model_losses.py  world_model_metrics.py
vllatent/verify/: __init__.py  vjepa2.py
