[project]
name = "vllatent"
version = "0.0.1"
description = "Compact latent world-action model for aerial VLN — frozen DINOv3 + latent predictor + trust-horizon"
requires-python = ">=3.10"
# PURE-tier deps ONLY. The heavy training stack (torch/transformers/timm) is the
# [torch] extra, installed on the dev box / H20 — never in default CI (which gates
# only the pure tier). The sim stack (airsim) is the [sim] extra, installed only in
# the fly0-m1 docker. See CLAUDE.md "Tier split".
dependencies = [
  "numpy>=1.24",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev   = ["ruff>=0.4", "mypy>=1.8", "pytest>=7.0", "types-PyYAML"]
torch = ["torch>=2.8", "transformers>=4.56", "timm>=1.0.20", "einops", "opencv-python"]
sim   = ["airsim", "msgpack-rpc-python", "opencv-python"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vllatent*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true

# Torch/sim stacks aren't installed in CI; treat them as missing imports so mypy
# type-checks the pure core without them present.
[[tool.mypy.overrides]]
module = ["torch.*", "transformers.*", "timm.*", "einops.*", "cv2.*", "airsim.*", "msgpackrpc.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
  "torch: needs the [torch] extra (DINOv3 / loader); auto-skipped where torch is absent",
  "sim: needs AirSim + the fly0-m1 sim (auto-skipped off-container)",
  "siblings: needs the fly0 sibling on PYTHONPATH (Phase D only; auto-skipped in A-C)",
]
testpaths = ["tests"]
