[project]
name = "vllatent"
version = "0.0.1"
description = "Human- and plan-conditioned latent world model for sports-following drones"
requires-python = ">=3.10"
# PURE-tier deps ONLY. The heavy training/ingest stack is the
# [torch] extra, installed only under explicit resource authority. Renderer-neutral
# simulator contracts use the default PURE dependencies; Blender supplies `bpy`.
dependencies = [
  "numpy>=1.24",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev   = ["ruff>=0.4", "mypy>=1.8", "pytest>=7.0", "types-PyYAML"]
torch = ["torch>=2.8,<2.13", "timm>=1.0.20,<2", "ultralytics>=8.2.0", "opencv-python", "pillow", "scenedetect", "plotly"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vllatent*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true

# Torch/ingest stacks aren't installed in CI; treat optional imports as missing.
[[tool.mypy.overrides]]
module = ["torch.*", "timm.*", "ultralytics.*", "cv2.*", "PIL.*", "scenedetect.*", "plotly.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
  "torch: needs the [torch] extra (DINOv3 / loader); auto-skipped where torch is absent",
  "tool: needs external tools (yt-dlp, ffmpeg, megasam); auto-skipped if not installed",
]
testpaths = ["tests"]
